--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
                                 technologies used and the problem it solves.</p>
                             <a href="https://github.com/piyushmaurya0823-crypto/cloning-Netflix.git"
                                 class="text-indigo-600 font-semibold hover:underline">View Details &rarr;</a>
+                            <a href="https://piyushmauryacodes.github.io/cloning-Netflix/"
+                                class="bg-white text-black-600 border-gray-900 font-bold py-3 px-8 rounded-full hover:bg-indigo-100 transition duration-300 transform hover:scale-105">Explore more</a>
                         </div>
                     </div>
                 </div>
@@ -402,3 +404,4 @@
 </body>
 
 </html>
+
