--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
                                 JavaScript</p>
                             <a href="https://github.com/piyushmaurya0823-crypto/Indian-Home-Cafe.git"
                                 class="text-indigo-600 font-semibold hover:underline">View Details &rarr;</a>
+                             <a href="https://piyushmauryacodes.github.io/Indian-Home-Cafe/"
+                                class="bg-white text-black-600 border-gray-900 font-bold py-3 px-8 rounded-full hover:bg-indigo-100 transition duration-300 transform hover:scale-105">Explore more</a>
                         </div>
                     </div>
                     <!-- Project Card 2 -->
@@ -233,6 +235,8 @@
                                 JavaScript</p>
                             <a href="https://github.com/piyushmaurya0823-crypto/Start-up-frame.git"
                                 class="text-indigo-600 font-semibold hover:underline">View Details &rarr;</a>
+                            <a href="https://piyushmauryacodes.github.io/Start-up-frame/"
+                                class="bg-white text-black-600 border-gray-900 font-bold py-3 px-8 rounded-full hover:bg-indigo-100 transition duration-300 transform hover:scale-105">Explore more</a>
                         </div>
                     </div>
                     <!-- Project Card 3 -->
@@ -404,4 +408,5 @@
 </body>
 
 </html>
+
 
