--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piyush Maurya - Personal Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="profile-pic.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="Picsart_25-08-26_23-14-34-408 (1).png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -409,6 +409,7 @@
 </body>
 
 </html>
+
 
 
 
