--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="container mx-auto px-6 text-center">
             <div class="flex justify-center space-x-6 mb-4">
                 <!-- GitHub -->
-                <a href="https://github.com/piyushmaurya0823-crypto" target="_blank" rel="noopener noreferrer"
+                <a href="https://github.com/piyushmauryacodes" target="_blank" rel="noopener noreferrer"
                     class="text-gray-400 hover:text-white transition duration-300">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -409,6 +409,7 @@
 </body>
 
 </html>
+
 
 
 
