--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <!-- Skills Section -->
         <section id="skills" class="py-20 bg-gray-100">
             <div class="container mx-auto px-6">
-                <h2 class="section-title reveal">My Technical Skills</h2>
+                <h2 class="class="section-title reveal text-4xl">My Technical Skills</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center reveal">
                     <!-- Frontend -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
@@ -188,7 +188,7 @@
         <!-- Projects Section -->
         <section id="projects" class="py-20">
             <div class="container mx-auto px-6">
-                <h2 class="section-title reveal">My Projects</h2>
+                <h2 class="section-title reveal text-4xl">My Projects</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 reveal">
                     <!-- Project Card 1 -->
                     <div
@@ -262,7 +262,7 @@
         <!-- Contact Section -->
         <section id="contact" class="bg-gray-100 py-20">
             <div class="container mx-auto px-6 reveal">
-                <h2 class="section-title">Get In Touch</h2>
+                <h2 class="class="section-title reveal text-4xl">Get In Touch</h2>
                 <div class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
                     <!-- IMPORTANT: Replace YOUR_FORM_ID with your actual Formspree form ID -->
                     <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
@@ -409,6 +409,7 @@
 </body>
 
 </html>
+
 
 
 
