--- a/index.html
+++ b/index.html
@@ -247,8 +247,15 @@
                             onerror="this.onerror=null;this.src='https://placehold.co/600x400/818cf8/3730a3?text=Project+Image';">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">NETFLIX-CLONE</h3>
-                            <p class="text-gray-600 mb-4">A brief description of the project, highlighting the
-                                technologies used and the problem it solves.</p>
+                            <p class="text-gray-600 mb-4">A functional clone of the Netflix user interface, developed for educational and learning purposes. This project demonstrates skills in recreating a complex, dynamic layout and user experience, focusing on front-end development techniques to mimic the popular streaming service.
+
+Technologies Used:
+
+HTML5
+
+CSS3
+
+JavaScript</p>
                             <a href="https://github.com/piyushmaurya0823-crypto/cloning-Netflix.git"
                                 class="text-indigo-600 font-semibold hover:underline">View Details &rarr;</a>
                             <a href="https://piyushmauryacodes.github.io/cloning-Netflix/"
@@ -409,6 +416,7 @@
 </body>
 
 </html>
+
 
 
 
